TAG: homologyload-5-1-3-1
DATE: 04/16/2013
STAFF: dbm
RELEASE:
CHANGES: N2MO release tag

TAG: mrkcoordload-5-1-1-5
TAG: mrkcoordload-5-1-1-4
DATE: 01/14/2013
STAFF: sc
RELEASE: dev
CHANGES: US 62 Complete & document the homologene load
1) runQC.py - a bit of code reorg and additional commenting
2) homologyload.sh
a) moved setting of HOMOLOGY_VERSION to homologyload.py to use pythons 
   date string formatting
b) improved commenting
3) homologyload.py
a) set HOMOLOGY_VERSION 
b) improved commenting
4) added index.html

TAG: mrkcoordload-5-1-1-3
DATE: 12/20/2012
STAFF: sc
RELEASE: dev
CHANGES: 
1) added org/sym sorting
2) fixed bug in checkColumns

TAG: mrkcoordload-5-1-1-2
TAG: mrkcoordload-5-1-1-1
DATE: 12/19/2012
STAFF: sc
RELEASE: dev
CHANGES: N2MO initial tag
