@@ -2,33 +2,34 @@
 
 <H1>Homology Load</H1>
 
-<UL>
+See <A HREF="http://prodwww.informatics.jax.org/wiki/index.php/Homologyload">Homology Load Wiki </A> for input file format, report descriptions, processing algorithms, etc.
 
+<UL>
 <H2>Data</H4>
 <UL>
-<LI><A HREF="/data/loads/scrum-bob/homologene/homologyload/output/homologyload_load.txt">Input File</A> 
+<LI><A HREF="/data/loads/homologene/homologyload/output/homologyload_load.txt">Input File</A> 
 </UL>
 
 <H2>Logs</H4>
 <UL>
 
-<LI><A HREF="/data/loads/scrum-bob/homologene/homologyload/logs/homologyload.proc.log">Process Log</A>
-<LI><A HREF="/data/loads/scrum-bob/homologene/homologyload/logs/homologyload.diag.log">Diagnostic Log</A>
+<LI><A HREF="/data/loads/homologene/homologyload/logs/homologyload.proc.log">Process Log</A>
+<LI><A HREF="/data/loads/homologene/homologyload/logs/homologyload.diag.log">Diagnostic Log</A>
 
 </UL>
 
 <H2>Reports</H4>
 <UL>
 
-<LI><A HREF="/data/loads/scrum-bob/homologene/homologyload/reports/sanity.rpt">Input File Sanity Report</A>
-<LI><A HREF="/data/loads/scrum-bob/homologene/homologyload/reports/qc.rpt">Input File QC Reports</A>
+<LI><A HREF="/data/loads/homologene/homologyload/reports/sanity.rpt">Input File Sanity Report</A>
+<LI><A HREF="/data/loads/homologene/homologyload/reports/qc.rpt">Input File QC Reports</A>
 </UL>
 
 <H2>Output Files</H4>
 <UL>
-<LI><A HREF="/data/loads/scrum-bob/homologene/homologyload/output/ACC_Accession.bcp">ACC_Accession.bcp</A>
-<LI><A HREF="/data/loads/scrum-bob/homologene/homologyload/output/MRK_Cluster.bcp">MRK_Cluster.bcp</A>
-<LI><A HREF="/data/loads/scrum-bob/homologene/homologyload/output/MRK_ClusterMember.bcp">MRK_ClusterMember.bcp</A>
+    <LI><A HREF="/data/loads/homologene/homologyload/output/ACC_Accession.bcp">ACC_Accession.bcp</A>
+<LI><A HREF="/data/loads/homologene/homologyload/output/MRK_Cluster.bcp">MRK_Cluster.bcp</A>
+<LI><A HREF="/data/loads/homologene/homologyload/output/MRK_ClusterMember.bcp">MRK_ClusterMember.bcp</A>
 </UL>
 
 </UL>
